# carnd-yury

./: .gitignore  README.md
CarND-Advanced-Lane-Lines/: README.md
CarND-Behavioral-Cloning-P3/: drive.py  report.md  training.py  video.py
CarND-Behavioral-Cloning-P3/report_img/: nvidia_reg.graphml
CarND-Extended-Kalman-Filter/: CMakeLists.txt  README.md
CarND-Extended-Kalman-Filter/data/: result.txt
CarND-Extended-Kalman-Filter/src/: FusionEKF.cpp  FusionEKF.h  kalman_filter.cpp  kalman_filter.h  tools.cpp  tools.h
CarND-Kidnapped-Vehicle-Project/: CMakeLists.txt
CarND-Kidnapped-Vehicle-Project/src/: main.cpp  particle_filter.cpp  particle_filter.h
CarND-MPC-Project/: CMakeLists.txt  README.md
CarND-MPC-Project/img/: architecture_ekf.graphml  architecture_native.graphml
CarND-MPC-Project/src/: MPC.cpp  MPC.h  ekf.cpp  ekf.h  main.cpp
CarND-PID-Control-Project/: CMakeLists.txt  README.md
CarND-PID-Control-Project/src/: PID.cpp  PID.h  main.cpp
CarND-Path-Planning-Project/: CMakeLists.txt  README.md
CarND-Path-Planning-Project/src/: EgoVehicle.cpp  EgoVehicle.h  Option.cpp  Option.h  Road.cpp  Road.h  main.cpp  utils.cpp  utils.h
CarND-Semantic-Segmentation/: .gitignore  README.md  helper.py  main.py  project_tests.py
CarND-Traffic-Sign-Classifier-Project/: .gitignore  Report.md  Traffic_Sign_Classifier.html  Traffic_Sign_Classifier.ipynb  ybrnet5.data-00000-of-00001  ybrnet5.index  ybrnet6.data-00000-of-00001  ybrnet6.index
CarND-Traffic-Sign-Classifier-Project/report_img/: ybrnet.graphml
CarND-Unscented-Kalman-Filter/: CMakeLists.txt  README.md
CarND-Unscented-Kalman-Filter/src/: FusionEKF.cpp  test.cpp  tools.cpp  tools.h  ukf.cpp  ukf.h
CarND-Vehicle-Detection/: Car Detection Final.ipynb  README.md  classifier_lin.p
(+48 files in other folders)
